Modal Update - styling external links on the modal page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- CUSTOM STYLE -->
-    <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
+    <link rel="stylesheet" href="assets/css/styles.css">
 
     <link rel="stylesheet" href="assets/css/portfolio.css">
 
@@ -225,6 +225,10 @@
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
+                <div class="sm-project">
+                    <a class="github" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/andresjoelv/" class="live" target="blank"><i class="fas fa-eye"></i></a>
+                </div>
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
                         <div class="rl">
@@ -254,9 +258,9 @@
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content">
-            <div class="to-project" data-dismiss="modal">
-                <a class="linkedin" href="https://www.linkedin.com/in/andresjoelv/"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://www.instagram.com/andresjoelv/" class="instagram"><i class="fab fa-instagram"></i></a>
+            <div class="sm-project">
+                <a class="github" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/andresjoelv/" class="live" target="blank"><i class="fas fa-eye"></i></a>
             </div>
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
