Modal Update - styling technology text display to match color

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         });
     </script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
     <!-- BOOTSTRAP CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="web/css/bootstrap.min.css"> -->
@@ -225,9 +227,9 @@
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
-                <div class="sm-project">
-                    <a class="github" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/andresjoelv/" class="live" target="blank"><i class="fas fa-eye"></i></a>
+                <div class="social-media">
+                    <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
                 </div>
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
@@ -243,8 +245,7 @@
                                 <h2>InstaBot</h2>
                                 <p class="item-intro text-muted">Javascript + HTML/CSS + React + MongoDB</p>
                                 <p>Helping digital marketers, and influencers grow their Instagram account by automating tasks like: Post, Like, Follow, Unfollow and more.</p>
-                                <p><a href="https://github.com/quintinlopes/Insta-Bot" target="blank">Github</a></p>
-                                <p><a href="https://i-bot-1991.herokuapp.com/" target="blank">Check it out!</a></p>
+                                
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
@@ -258,9 +259,9 @@
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content">
-            <div class="sm-project">
-                <a class="github" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/andresjoelv/" class="live" target="blank"><i class="fas fa-eye"></i></a>
+            <div class="social-media">
+                <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
             </div>
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -273,11 +274,16 @@
                     <div class="col-lg-8 offset-lg-2">
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
-                            <h2>InstaBot</h2>
+                            <h2>RPS-Multiplayer</h2>
                             <p class="item-intro text-muted">Javascript + HTML/CSS + React + MongoDB</p>
-                            <p>Helping digital marketers, and influencers grow their Instagram account by automating tasks like: Post, Like, Follow, Unfollow and more.</p>
-                            <p><a href="https://github.com/quintinlopes/Insta-Bot" target="blank">Github</a></p>
-                            <p><a href="https://i-bot-1991.herokuapp.com/" target="blank">Check it out!</a></p>
+                            <!-- Body of modal-mody -->
+                            <h2></h2>
+                            <p>A Firebase and jQuery-based multiplayer online Rock Paper Scissors game.</p>
+                            <h3>Description</h3>
+                            <p>This application allows two users with separate sessions/devices to play against one another. The game follows straightforward rock paper scissors rules. Users' stats, choices, and chat messages are tracked and updated in realtime via Firebase. I took this project as an exercise in extending and hardening my skills with Firebase.</p>
+                            <h3>Getting Started</h3>
+                            <p>To play the game, click on the eye icon above. You won't be able to play it alone, so make sure to grab a friend (or maybe just a second browser tab)! If you prefer to run the application locally, you can clone this repository and open index.html in your web browser of choice.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
                 </div>
