Modal Update - styling finished. Now working on responsiveness

--- a/index.html
+++ b/index.html
@@ -243,7 +243,12 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>InstaBot</h2>
-                                <p class="item-intro text-muted">Javascript + HTML/CSS + React + MongoDB</p>
+                                <p class="item-intro text-muted">
+                                    <span class="javascript">Javascript</span>  
+                                    <span class="htmlcss">HTML/CSS</span>  
+                                    <span class="react">React</span>  
+                                    <span class="mongodb">MongoDB</span>
+                                </p>
                                 <p>Helping digital marketers, and influencers grow their Instagram account by automating tasks like: Post, Like, Follow, Unfollow and more.</p>
                                 
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -275,7 +280,12 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>RPS-Multiplayer</h2>
-                            <p class="item-intro text-muted">Javascript + HTML/CSS + React + MongoDB</p>
+                            <p class="item-intro text-muted">
+                                <span class="javascript">Javascript</span>  
+                                <span class="htmlcss">HTML/CSS</span>  
+                                <span class="jquery">jQuery</span>  
+                                <span class="firebase">Firebase</span>
+                            </p>
                             <!-- Body of modal-mody -->
                             <h2></h2>
                             <p>A Firebase and jQuery-based multiplayer online Rock Paper Scissors game.</p>
