Modal Update - responsiveness finished, adding color scheme for technology names

--- a/index.html
+++ b/index.html
@@ -302,6 +302,50 @@
         </div>
     </div>
 
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+            <div class="social-media">
+                <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+            </div>
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Clicky Game</h2>
+                            <p class="item-intro text-muted">
+                                <span class="javascript">Javascript</span>  
+                                <span class="htmlcss">HTML</span>
+                                <span class="css">CSS</span>  
+                                <span class="react">React</span>  
+                                <span class="nodejs">Node</span>
+                                <span class="fawesome">Font Awesome</span>
+                            </p>
+                            <!-- Body of modal-mody -->
+                            <h2></h2>
+                            <p>A Firebase and jQuery-based multiplayer online Rock Paper Scissors game.</p>
+                            <h3>Description</h3>
+                            <p>This application allows two users with separate sessions/devices to play against one another. The game follows straightforward rock paper scissors rules. Users' stats, choices, and chat messages are tracked and updated in realtime via Firebase. I took this project as an exercise in extending and hardening my skills with Firebase.</p>
+                            <h3>Getting Started</h3>
+                            <p>To play the game, click on the eye icon above. You won't be able to play it alone, so make sure to grab a friend (or maybe just a second browser tab)! If you prefer to run the application locally, you can clone this repository and open index.html in your web browser of choice.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
     <!-- BOOTSTRAP JS -->
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
