--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     
     <!-- SMINT v3.0-->
-    <script type="text/javascript" 	src="assets/plugins/smint/jquery.smint.js"></script>
+    <script type="text/S" 	src="assets/plugins/smint/jquery.smint.js"></script>
     <script type="text/javascript">
         $(document).ready( function() {
             $('.subMenu').smint({
@@ -193,7 +193,7 @@
                                 <img src="assets/images/p5.png" class="img-responsive" alt="">
                             </a>
                             <div class="portfolio-caption">
-                                <h4>Rocket Design</h4>
+                                <h4>Bamazon CLI</h4>
                                 <p class="text-muted">HTML3 &#38; CSS3</p>
                             </div>
                         </div>
@@ -228,8 +228,8 @@
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="social-media">
-                    <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
-                    <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+                    <a class="github animated bounce delay-1s" href="https://github.com/Oleksii13/instaBot" target="blank"><i class="fab fa-github"></i></a>
+                    <a href="https://i-bot-1991.herokuapp.com/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
                 </div>
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
@@ -243,8 +243,8 @@
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
                                 <h2>InstaBot</h2>
-                                <p class="item-intro text-muted">
-                                    <span class="javascript">Javascript</span>  
+                                <p class="tech text-muted">
+                                    <span class="javascript">JavaScript</span>  
                                     <span class="htmlcss">HTML/CSS</span>  
                                     <span class="react">React</span>  
                                     <span class="mongodb">MongoDB</span>
@@ -265,8 +265,8 @@
         <div class="modal-dialog modal-xl" role="document">
           <div class="modal-content">
             <div class="social-media">
-                <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+                <a class="github animated bounce delay-1s" href="https://github.com/andresjoelv/rps-multiplayer" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://andresjoelv.github.io/rps-multiplayer/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
             </div>
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -280,8 +280,8 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>RPS-Multiplayer</h2>
-                            <p class="item-intro text-muted">
-                                <span class="javascript">Javascript</span>  
+                            <p class="tech text-muted">
+                                <span class="javascript">JavaScript</span>  
                                 <span class="htmlcss">HTML/CSS</span>  
                                 <span class="jquery">jQuery</span>  
                                 <span class="firebase">Firebase</span>
@@ -307,8 +307,8 @@
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
             <div class="social-media">
-                <a class="github animated bounce delay-1s" href="https://www.linkedin.com/in/andresjoelv/" target="blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/andresjoelv/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+                <a class="github animated bounce delay-1s" href="https://github.com/andresjoelv/clicky-game" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://andresjoelv.github.io/clicky-game/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
             </div>
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -322,8 +322,8 @@
                         <div class="modal-body">
                             <!-- Project Details Go Here -->
                             <h2>Clicky Game</h2>
-                            <p class="item-intro text-muted">
-                                <span class="javascript">Javascript</span>  
+                            <p class="tech text-muted">
+                                <span class="javascript">JavaScript</span>  
                                 <span class="htmlcss">HTML</span>
                                 <span class="css">CSS</span>  
                                 <span class="react">React</span>  
@@ -331,12 +331,138 @@
                                 <span class="fawesome">Font Awesome</span>
                             </p>
                             <!-- Body of modal-mody -->
-                            <h2></h2>
                             <p>A Firebase and jQuery-based multiplayer online Rock Paper Scissors game.</p>
                             <h3>Description</h3>
                             <p>This application allows two users with separate sessions/devices to play against one another. The game follows straightforward rock paper scissors rules. Users' stats, choices, and chat messages are tracked and updated in realtime via Firebase. I took this project as an exercise in extending and hardening my skills with Firebase.</p>
                             <h3>Getting Started</h3>
                             <p>To play the game, click on the eye icon above. You won't be able to play it alone, so make sure to grab a friend (or maybe just a second browser tab)! If you prefer to run the application locally, you can clone this repository and open index.html in your web browser of choice.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 4 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+            <div class="social-media">
+                <a class="github animated bounce delay-1s" href="https://github.com/andresjoelv/word-guess-game" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://andresjoelv.github.io/word-guess-game/" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+            </div>
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Hangman</h2>
+                            <p class="tech text-muted">
+                                <span class="javascript">JavaScript</span>  
+                                <span class="htmlcss">HTML</span>
+                                <span class="css">CSS</span>
+                            </p>
+                            <!-- Body of modal-mody -->
+                            <p>Game was created as an Object for the purpose of making it more challenging.</p>
+                            <h3>Description</h3>
+                            <p>Fun game that will run in the browser, and features dynamically updated HTML and CSS powered by JavaScript code.</p>
+                            <h3>Getting Started</h3>
+                            <p>To play the game, click on the eye icon above. Object will detect key event for each letter. If letter is contained in the word it will be displayed</p>
+                            <p>If limited amount fo guesses is reached the game is over.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 5 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+            <div class="social-media">
+                <a class="github animated bounce delay-1s" href="https://github.com/andresjoelv/bamazon" target="blank"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Bamazon CLI</h2>
+                            <p class="tech text-muted">
+                                <span class="javascript">JavaScript</span>  
+                                <span class="htmlcss">jQuery</span>
+                                <span class="nodejs">Node</span>
+                                <span class="mysql">MySQL</span>
+                                <span class="expressjs">Express</span>
+                            </p>
+                            <!-- Body of modal-mody -->
+                            <p>A command line interfance application</p>
+                            <h3>Description</h3>
+                            <p>A Node.js & MySQL command line Amazon-like storefront app that takes in customers orders and depletes stock from the stores Inventory.</p>
+                            <p>Demo command line app (CLI) that simulates the back end of a food business wholesale order platform with server storage and a managers login for administration abilities.</p>
+                            <h3>Getting Started</h3>
+                            <p>check the documentation by clicking on the github icon above.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 6 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+            <div class="social-media">
+                <a class="github animated bounce delay-1s" href="https://github.com/andresjoelv/burger" target="blank"><i class="fab fa-github"></i></a>
+                <a href="https://glacial-shelf-41418.herokuapp.com/index" class="demo animated bounce delay-2s" target="blank"><i class="fas fa-eye"></i></a>
+            </div>
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 offset-lg-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Eat Da Burger</h2>
+                            <p class="tech text-muted">
+                                <span class="javascript">JavaScript</span>  
+                                <span class="htmlcss">jQuery</span>
+                                <span class="nodejs">Node</span>
+                                <span class="mysql">MySQL</span>
+                                <span class="expressjs">Express</span>
+                            </p>
+                            <!-- Body of modal-mody -->
+                            <p>A restaurant app that lets users input the names of burgers they'd like to eat.</p>
+                            <h3>Description</h3>
+                            <p>Whenever a user submits a burger's name, the app will display the burger on the left side of the page -- waiting to be devoured.</p>
+                            <p>Each burger in the waiting area also has a Devour it! button. When the user clicks it, the burger will move to the right side of the page.</p>
+                            <p>The app will store every burger in a database, whether devoured or not.</p>
+                            <h3>Getting Started</h3>
+                            <p>click on the eye icon above.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
