Modal update - thumbnail updated text and name of each project modal

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <h4>Clicky Game</h4>
-                                <p class="text-muted">Website Development &#38; Design</p>
+                                <p class="text-muted">React app &#38; Node</p>
                             </div>
                         </div>
                         <!-- 4 -->
@@ -179,7 +179,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <h4>Hangman</h4>
-                                <p class="text-muted">Website Development &#38; Design</p>
+                                <p class="text-muted">Game development &#38; Design</p>
                             </div>
                         </div>
                         <!-- 5 -->
@@ -194,7 +194,7 @@
                             </a>
                             <div class="portfolio-caption">
                                 <h4>Bamazon CLI</h4>
-                                <p class="text-muted">HTML3 &#38; CSS3</p>
+                                <p class="text-muted">CLI app &#38; Databases</p>
                             </div>
                         </div>
                         <!-- 6 -->
@@ -208,8 +208,8 @@
                                 <img src="assets/images/p6.jpg" class="img-responsive" alt="">
                             </a>
                             <div class="portfolio-caption">
-                                <h4>Full Screen Landing Page</h4>
-                                <p class="text-muted">HTML3 &#38; CSS3</p>
+                                <h4>Eat da burger</h4>
+                                <p class="text-muted">Node app &#38; Design</p>
                             </div>
                         </div>
                     </div>
