Modal update - thumbnail updated text on hover: from icon to text

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                             <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <i class="fa fa-bug fa-3x"></i>
+                                        <i>view details</i>
                                     </div>
                                 </div>
                                 <img src="assets/images/p2.jpg" class="img-responsive" alt="">
@@ -157,7 +157,7 @@
                             <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <i class="fa fa-bug fa-3x"></i>
+                                        <i>view details</i>
                                     </div>
                                 </div>
                                 <img src="assets/images/p3.jpg" class="img-responsive" alt="">
@@ -172,7 +172,7 @@
                             <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <i class="fa fa-bug fa-3x"></i>
+                                        <i>view details</i>
                                     </div>
                                 </div>
                                 <img src="assets/images/p4.jpg" class="img-responsive" alt="">
@@ -187,7 +187,7 @@
                             <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <i class="fa fa-bug fa-3x"></i>
+                                        <i>view details</i>
                                     </div>
                                 </div>
                                 <img src="assets/images/p5.png" class="img-responsive" alt="">
@@ -202,7 +202,7 @@
                             <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content">
-                                        <i class="fa fa-bug fa-3x"></i>
+                                        <i>view details</i>
                                     </div>
                                 </div>
                                 <img src="assets/images/p6.jpg" class="img-responsive" alt="">
