plugin folder added, smint library to scroll to specific area.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="assets/js/jquery-3.3.1.min.js"></script>
     
     <!-- SMINT v3.0-->
-    <script type="text/S" 	src="assets/plugins/smint/jquery.smint.js"></script>
+    <script type="text/javascript" 	src="assets/plugins/smint/jquery.smint.js"></script>
     <script type="text/javascript">
         $(document).ready( function() {
             $('.subMenu').smint({
