--- a/index.html
+++ b/index.html
@@ -460,7 +460,10 @@
                                 <br />
                                 <!-- Body of modal-mody -->
                                 <p>A restaurant app that lets users input the names of burgers they'd like to eat.</p>
-                                <img class="img-responsive img-centered" src="assets/images/modals/rps_multiplayer.PNG" alt="">
+                                <div class="mobile-img">
+                                    <img class="img-responsive img-centered" src="assets/images/modals/rps_multiplayer.PNG" alt="">
+                                </div>
+                                
                                 <br />
                                 <br />
                                 <br />
