changed demo button text from visit the website to demo

--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <div class="modal-content">
                 <div class="social-media d-flex justify-content-center">
                     <a class="github animated bounceInLeft" href="https://github.com/andresjoelv/burger" target="blank"><i class="fab fa-github"></i>   GITHUB</a>
-                    <a href="https://glacial-shelf-41418.herokuapp.com/index" class="demo animated bounceInRight" target="blank"><i class="fas fa-eye"></i>     VISIT THE WEBSITE</a>
+                    <a href="https://glacial-shelf-41418.herokuapp.com/index" class="demo animated bounceInRight" target="blank"><i class="fas fa-eye"></i>     DEMO</a>
                 </div>
                 <div class="close-modal" data-dismiss="modal">
                     <div class="lr">
