--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                 </div>
             </div>
         </div>
-    </div>v>
+    </div>
     </div>
 
     <!-- Portfolio Modal 4 -->
