--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                 </div>
                                 
                                 <!-- Body of modal-mody -->
-                                <p>A command line interfance application</p>
+                                <p>A command line interface application</p>
                                 <div class="mobile-img">
                                     <img class="img-responsive img-centered" src="assets/images/modals/bamazonManagerGif.gif" alt="">
                                 </div>
@@ -543,7 +543,7 @@
 
                                 <h3>About this project</h3>
                                 <hr />
-                                <p>A Node.js & MySQL command line Amazon-like storefront app that takes in customers orders and depletes stock from the stores Inventory.</p>
+                                <p>A Node.js & MySQL command line Amazon-like storefront app that takes in customers orders and deletes stock from the stores Inventory.</p>
                                 <p>Demo command line app (CLI) that simulates the back end of a food business wholesale order platform with server storage and a managers login for administration abilities.</p>
                                 <br />
 
