instagram link updated

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="d-md-flex align-items-center justify-content-xl-end justify-content-between">
                             <div class="social-media mb-0 mt-4 mt-md-0">
                                 <a class="linkedin" href="https://www.linkedin.com/in/andresjoelv/"><i class="fab fa-linkedin-in"></i></a>
-                                <a href="https://www.instagram.com/andresjoel.v/" class="instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/andresjoelv/" class="instagram"><i class="fab fa-instagram"></i></a>
                                 <a href="https://www.facebook.com/andresjoel" class="facebook"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#" class="twitter"><i class="fab fa-twitter"></i></a>
                             </div>
